# risc0-benchmark

./: README.md  input.json
.ipynb_checkpoints/: README-checkpoint.md
host/: Cargo.toml
host/src/: main.rs
host/src/.ipynb_checkpoints/: main-checkpoint.rs
methods/guest/.ipynb_checkpoints/: Cargo-checkpoint.toml
methods/guest/src/: main.rs
res/input-data/: linear_regression_data_bytes.json
res/ml-model/: linear_regression_model_bytes.json
